--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <!-- logo -->
             <div class="box_logo">
                 <p class="text_logo">
-                    <a href="#">
+                    <a href="./index.html">
                         FRAIS
                     </a>
                 </p>
@@ -57,7 +57,7 @@
             <!-- nav -->
             <div class="box_nav">
                 <ul class="box_menu">
-                    <li class="item_menu "><a href="./index.html">HOME</a></li>
+                    <li class="item_menu "><a href="./home.html">HOME</a></li>
                     <li class="item_menu "><a href="./shop_all.html">SHOP ALL</a></li>
                     <li class="item_menu "><a href="./for_body.html">FOR BODY</a></li>
                     <li class="item_menu "><a href="./about.html">ABOUT</a></li>
@@ -253,7 +253,7 @@
                 <div class="item_grib--10 item_grib--w4 flex-1">
                     <div class="box_main--content">
                         <h2 class="title_footer">FRAIS</h2>
-                        <a href="./index.html"> <p class="text_footer">HOME</p></a>
+                        <a href="./home.html"> <p class="text_footer">HOME</p></a>
                         <a href="./shop_all.html"> <p class="text_footer">SHOP ALL</p></a>
                         <a href="./for_body.html"> <p class="text_footer">FOR BODY</p></a>
                         <a href="./about.html"> <p class="text_footer">ABOUT</p></a>
