--- a/for_body.html
+++ b/for_body.html
@@ -48,7 +48,7 @@
             <!-- logo -->
             <div class="box_logo">
                 <p class="text_logo">
-                    <a href="#">
+                    <a href="./index.html">
                         FRAIS
                     </a>
                 </p>
@@ -57,7 +57,7 @@
             <!-- nav -->
             <div class="box_nav">
                 <ul class="box_menu">
-                    <li class="item_menu "><a href="./index.html">HOME</a></li>
+                    <li class="item_menu "><a href="./home.html">HOME</a></li>
                     <li class="item_menu "><a href="./shop_all.html">SHOP ALL</a></li>
                     <li class="item_menu action_menu"><a href="./for_body.html">FOR BODY</a></li>
                     <li class="item_menu"><a href="./about.html">ABOUT</a></li>
@@ -187,7 +187,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-13.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_13.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -213,7 +213,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-14.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_13.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -239,7 +239,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-15.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_15.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -265,7 +265,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-16.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_16.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -291,7 +291,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-17.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_17.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -317,7 +317,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-18.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_18.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -343,7 +343,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-19.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_19.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -369,7 +369,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-20.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_20.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -395,7 +395,7 @@
                     <div class="box_content">
                         <div class="box_main--img">
                             <img src="./access/image/img_sp/img-21.jpg" alt="">
-                            <a href="#">
+                            <a href="./SP_21.html">
                                 <div class="box_view--inf">
                                     <p class="text--view">Quick view</p>
                                 </div>
@@ -427,7 +427,7 @@
                 <div class="item_grib--10 item_grib--w4 flex-1">
                     <div class="box_main--content">
                         <h2 class="title_footer">FRAIS</h2>
-                        <a href="./index.html"> <p class="text_footer">HOME</p></a>
+                        <a href="./home.html"> <p class="text_footer">HOME</p></a>
                         <a href="./shop_all.html"> <p class="text_footer">SHOP ALL</p></a>
                         <a href="./for_body.html"> <p class="text_footer">FOR BODY</p></a>
                         <a href="./about.html"> <p class="text_footer">ABOUT</p></a>
